--- a/find_my_coffee_api/Gemfile
+++ b/find_my_coffee_api/Gemfile
@@ -16,6 +16,8 @@ gem 'jbuilder', '~> 2.7'
 # Use Active Model has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
+gem 'rest-client', '~> 2.1.0'
+
 gem 'activerecord-postgis-adapter', '~> 6.0.1'
 
 # Use Active Storage variant
@@ -25,7 +27,7 @@ gem 'activerecord-postgis-adapter', '~> 6.0.1'
 gem 'bootsnap', '>= 1.4.2', require: false
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-# gem 'rack-cors'
+gem 'rack-cors'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
